Changemement balise OG vote

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
     <link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipadpro10-1668x2224.png">
     <!-- iPad Pro 12.9" (2048px x 2732px) -->
     <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipadpro12-2048x2732.png">
+
+    <meta property="og:image" content="" />
   </head>
   <body>
     <noscript>
