--- a/public/index.html
+++ b/public/index.html
@@ -30,5 +30,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      var manifest = document.querySelector('link[rel=manifest]');
+      if ('standalone' in navigator) manifest.parentNode.removeChild(manifest);
+    </script>
   </body>
 </html>
