Balises OG et metas title /  description

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>hepic</title>
+    <title>Hepic – Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous</title>
+    <meta name="description" content="Hepic vous rapproche des marques et des organismes que vous aimez, en vous donnant un accès simple et gratuit à leurs concours photo. Et cela en quelques clics, sur le web ou depuis l'application. Sur Hepic, partagez votre talent photo et remportez des lots !">
 
     <!-- iPhone X (1125px x 2436px) -->
     <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphonex-1125x2436.png">
@@ -22,7 +23,17 @@
     <!-- iPad Pro 12.9" (2048px x 2732px) -->
     <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipadpro12-2048x2732.png">
 
-    <meta property="og:image" content="" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@hepic">
+    <meta name="twitter:title" content="Hepic – Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous">
+    <meta property="og:site_name" content="Hepic">
+    <meta property="og:title" content="Hepic – Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous">
+    <meta property="og:description" content="Hepic vous rapproche des marques et des organismes que vous aimez, en vous donnant un accès simple et gratuit à leurs concours photo. Et cela en quelques clics, sur le web ou depuis l'application. Sur Hepic, partagez votre talent photo et remportez des lots !">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hepic.fr">
+    <meta property="og:image" content="<%= BASE_URL %>og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
   </head>
   <body>
     <noscript>
