--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <meta property="og:description" content="Hepic vous rapproche des marques et des organismes que vous aimez, en vous donnant un accès simple et gratuit à leurs concours photo. Et cela en quelques clics, sur le web ou depuis l'application. Sur Hepic, partagez votre talent photo et remportez des lots !">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hepic.fr">
-    <meta property="og:image" content="<%= BASE_URL %>/img/og/banner.png">
+    <meta property="og:image" content="<%= BASE_URL %>img/og/banner.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
   </head>
