--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>Hepic – Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous</title>
     <meta name="description" content="Hepic vous rapproche des marques et des organismes que vous aimez, en vous donnant un accès simple et gratuit à leurs concours photo. Et cela en quelques clics, sur le web ou depuis l'application. Sur Hepic, partagez votre talent photo et remportez des lots !">
 
+    <link rel="canonical" href="https://hepic.fr">
+
     <!-- iPhone X (1125px x 2436px) -->
     <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphonex-1125x2436.png">
     <!-- iPhone 8, 7, 6s, 6 (750px x 1334px) -->
