Ajout appid balise og

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <meta name="twitter:site" content="@hepic">
     <meta name="twitter:title" content="Hepic – Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous">
     <meta property="og:site_name" content="Hepic">
+    <meta property="fb:app_id" content="699411133760678">
     <meta property="og:title" content="Hepic – Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous">
     <meta property="og:description" content="Hepic vous rapproche des marques et des organismes que vous aimez, en vous donnant un accès simple et gratuit à leurs concours photo. Et cela en quelques clics, sur le web ou depuis l'application. Sur Hepic, partagez votre talent photo et remportez des lots !">
     <meta property="og:type" content="website">
