--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,19 @@
     <link rel="canonical" href="https://hepic.fr">
 
     <!-- iPhone X (1125px x 2436px) -->
-    <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphonex-1125x2436.png">
+    <!-- <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphonex-1125x2436.png"> -->
     <!-- iPhone 8, 7, 6s, 6 (750px x 1334px) -->
-    <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphone-750x1334.png">
+    <!-- <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphone-750x1334.png"> -->
     <!-- iPhone 8 Plus, 7 Plus, 6s Plus, 6 Plus (1242px x 2208px) -->
-    <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphoneplus-1242x2208.png">
+    <!-- <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphoneplus-1242x2208.png"> -->
     <!-- iPhone 5 (640px x 1136px) -->
-    <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphone5-640x1136.png">
+    <!-- <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-iphone5-640x1136.png"> -->
     <!-- iPad Mini, Air (1536px x 2048px) -->
-    <link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipad-1536x2048.png">
+    <!-- <link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipad-1536x2048.png"> -->
     <!-- iPad Pro 10.5" (1668px x 2224px) -->
-    <link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipadpro10-1668x2224.png">
+    <!-- <link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipadpro10-1668x2224.png"> -->
     <!-- iPad Pro 12.9" (2048px x 2732px) -->
-    <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipadpro12-2048x2732.png">
+    <!-- <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipadpro12-2048x2732.png"> -->
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@hepic">
