Message erreur noscript en francais

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but hepic doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Nous sommes désolé mais l'application Hepic a besoin du javascript pour fonctionner. Veuillez l'activer pour continuer à utiliser le service.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
