--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     </noscript>
     <div id="app"></div>
     <script>
+      /* Fix pour le bug oAuth Safari -- retrait manifest pour éviter redirection vers browser - A retirer une fois le bug Safari réglé */
       var manifest = document.querySelector('link[rel=manifest]');
       if ('standalone' in navigator) manifest.parentNode.removeChild(manifest);
     </script>
