Meta OG pour SEO

--- a/public/index.html
+++ b/public/index.html
@@ -26,15 +26,13 @@
     <!-- <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="<%= BASE_URL %>img/splashscreen/apple-launch-ipadpro12-2048x2732.png"> -->
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@hepic">
-    <meta name="twitter:title" content="Hepic – Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous">
+    <meta name="twitter:title" content="Hepic – Concours photo gratuits et faits pour vous">
     <meta property="og:site_name" content="Hepic">
-    <meta property="fb:app_id" content="699411133760678">
-    <meta property="og:title" content="Hepic – Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous">
-    <meta property="og:description" content="Hepic vous rapproche des marques et des organismes que vous aimez, en vous donnant un accès simple et gratuit à leurs concours photo. Et cela en quelques clics, sur le web ou depuis l'application. Sur Hepic, partagez votre talent photo et remportez des lots !">
+    <meta property="og:title" content="Hepic – Concours photo gratuits et faits pour vous">
+    <meta property="og:description" content="Trouvez, tentez et gagnez des concours photo sur le web ou depuis l'application. Partagez votre talent photo et remportez des lots sur Hepic !">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hepic.fr">
-    <meta property="og:image" content="<%= BASE_URL %>img/og/banner.png">
+    <meta property="og:image" content="<%= BASE_URL %>/img/og/banner.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
   </head>
