--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <meta property="og:description" content="Trouvez, tentez et gagnez des concours photo sur le web ou depuis l'application. Partagez votre talent photo et remportez des lots sur Hepic !">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hepic.fr">
-    <meta property="og:image" content="<%= BASE_URL %>/img/og/banner.png">
+    <meta property="og:image" content="<%= BASE_URL %>img/og/banner.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
   </head>
