--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,17 @@
     <meta property="og:image" content="<%= BASE_URL %>img/og/banner.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "WebSite",
+      "@id": "https://hepic.fr/#website",
+    	"name": "Application de concours photo Hepic",
+      "description": "Trouvez, tentez et gagnez des concours photo sur le web ou depuis l'application. Partagez votre talent photo et remportez des lots sur Hepic !",
+      "url": "https://hepic.fr"
+    }
+    </script>
   </head>
   <body>
     <noscript>
