--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Hepic – Concours photo gratuits et faits pour vous">
     <meta property="og:site_name" content="Hepic">
+    <meta property="fb:app_id" content="699411133760678"> 
     <meta property="og:title" content="Hepic – Concours photo gratuits et faits pour vous">
     <meta property="og:description" content="Trouvez, tentez et gagnez des concours photo sur le web ou depuis l'application. Partagez votre talent photo et remportez des lots sur Hepic !">
     <meta property="og:type" content="website">
