Changement balise title

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Hepic – Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous</title>
+    <title>Hepic – Trouvez des concours photo gratuits et faits pour vous</title>
     <meta name="description" content="Hepic vous rapproche des marques et des organismes que vous aimez, en vous donnant un accès simple et gratuit à leurs concours photo. Et cela en quelques clics, sur le web ou depuis l'application. Sur Hepic, partagez votre talent photo et remportez des lots !">
 
     <link rel="canonical" href="https://hepic.fr">
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Hepic – Concours photo gratuits et faits pour vous">
     <meta property="og:site_name" content="Hepic">
-    <meta property="fb:app_id" content="699411133760678"> 
+    <meta property="fb:app_id" content="699411133760678">
     <meta property="og:title" content="Hepic – Concours photo gratuits et faits pour vous">
     <meta property="og:description" content="Trouvez, tentez et gagnez des concours photo sur le web ou depuis l'application. Partagez votre talent photo et remportez des lots sur Hepic !">
     <meta property="og:type" content="website">
