--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,10 @@
       <strong>Nous sommes désolé mais l'application Hepic a besoin du javascript pour fonctionner. Veuillez l'activer pour continuer à utiliser le service.</strong>
     </noscript>
     <div id="app"></div>
-    <script>
+    <!-- <script>
       /* Fix pour le bug oAuth Safari -- retrait manifest pour éviter redirection vers browser - A retirer une fois le bug Safari réglé */
       var manifest = document.querySelector('link[rel=manifest]');
       if ('standalone' in navigator) manifest.parentNode.removeChild(manifest);
-    </script>
+    </script> -->
   </body>
 </html>
